# OpenGLTutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md
include/: glsl_compiler.h  image_loader.h  matrix.h  mesh.h  mesh3D.h  mesh_manager.h  renderer.h  texture.h  texture_manager.h
include/API/: Buffer.h  Gpu_Backend.h  OpenGL_Backend.h  ShaderManager.h  gl_backend.h
include/API/OpenGL/: GLBackend.h  GLBuffer.h  GLBufferManager.h  GLEnums.h  GLMeshBuffer.h  GLShaderManager.h  GLTexture.h  GLTextureManager.h  GLUtil.h
include/App/: Docs.md  Realm.h
include/Asset/: asset.h  asset_manager.h
include/Backend/: backend.h
include/Backend/Editor/: Editor.h
include/Backend/Window/: PrimaryWindow.h  glfw_window.h
include/Camera/: CameraTypes.h  camera.h  fly_camera.h  fps_camera.h
include/Core/: GameHandler.h  GameObject.h  MovementHandler.h  MovementStateManager.h  Scene.h  Shader.h  Simulation.h  game_handler.h
include/Core/Objects/: FlatGridMap.h  GameObject.h  Light.h  RenderObject.h  Static3D.h
include/File/: File.h
include/Managers/: InputManager.h  SceneManager.h  ShaderManager.h  WindowManager.h
include/common/: ConstVertices.h  Enums.h  LightEnums.h  Logging.h  Matrix.h  TartarusKeycodes.h  algorithm.h  array.h  error_handler.h  light_attenuation.h  primitive_vertices.h  types.h
shaders/: basic.vert  basic_orange.frag  basic_pink.frag  default.frag  default.vert  defaultInstanced.vert  light_source.frag  receive_color.frag  send_color.vert  send_color_layout.vert  texture2D_location.frag  texture2D_location.vert  uniform_color.frag
src/: glsl_compiler.cpp  image_loader.cpp  main.cpp  matrix.cpp  mesh.cpp  mesh3D.cpp  mesh_manager.cpp  renderer.cpp  texture.cpp  texture_manager.cpp
src/API/: OpenGL_Backend.cpp  gl_backend.cpp
src/API/OpenGL/: GLBackend.cpp  GLBuffer.cpp  GLBufferManager.cpp  GLMeshBuffer.cpp  GLShaderManager.cpp  GLTexture.cpp  GLTextureManager.cpp
src/APP/: Realm.cpp  main.cpp
src/Asset/: asset.cpp  asset_manager.cpp
src/Backend/: backend.cpp
src/Backend/Editor/: Editor.cpp
src/Backend/Window/: PrimaryWindow.cpp  glfw_window.cpp
src/Camera/: camera.cpp  fly_camera.cpp  fps_camera.cpp
src/Common/: Enums.cpp  Logging.cpp  Matrix.cpp
src/Core/: GameHandler.cpp  MovementHandler.cpp  MovementStateManager.cpp  Scene.cpp  Shader.cpp  Simulation.cpp  game_handler.cpp
src/Core/Objects/: DirectLight.cpp  FlatGridMap.cpp  GameObject.cpp  PointLight.cpp  RenderObject.cpp  Static3D.cpp
src/File/: File.cpp
src/Managers/: InputManager.cpp  SceneManager.cpp  ShaderManager.cpp  WindowManager.cpp
src/common/: error_handler.cpp
